# comsol-codex-mcp

./: CHANGELOG.md  CITATION.cff  NOTICE.md  ROADMAP.md  SECURITY.md  pyproject.toml
comsol-codex-mcp/: CONTRIBUTING.md  LICENSE  README.md
comsol-codex-mcp/docs/: comparison.md  safety.md  tool_reference.md
comsol-codex-mcp/examples/: mcp_config.json
comsol-codex-mcp/src/comsol_mcp_server/: __init__.py  cli.py  tools.py
comsol-codex-mcp/tests/: test_tools.py
docs/: architecture.md  compatibility.md  quickstart.md  recipes.md
examples/: MinimalModel.java  README.md  project_adapter.yaml
src/comsol_mcp_server/: config.py  recipes.py  server.py
