[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "comsol-codex-mcp"
version = "0.1.0"
description = "MCP server and agent toolkit for reproducible COMSOL batch workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "COMSOL Codex MCP contributors" }
]
keywords = ["comsol", "mcp", "codex", "simulation", "java-api", "batch"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = ["pytest>=8.0"]

[project.scripts]
comsol-mcp-server = "comsol_mcp_server.server:main"
comsol-tool = "comsol_mcp_server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/comsol_mcp_server"]

